Refactor menge documentation to build code separate from explanation
In order to speed up the process of documenting menge, I've refactored
the documentation so that the main documentation explanation pages can
simply refer to the code documentation (without rebuilding it).

--- a/doc/MengeCode.cfg
+++ b/doc/MengeCode.cfg
@@ -754,33 +754,8 @@ WARN_LOGFILE           =
 # spaces.
 # Note: If this tag is empty the current directory is searched.
 
-INPUT                  = doc/mengeDetails/mainpage.md \
-						 doc/mengeDetails/sceneSpec.md \
-						 doc/mengeDetails/behaveSpec.md \		
-						 doc/mengeDetails/viewSpec.md \
-						 doc/mengeDetails/outSpec.md \
-						 doc/mengeDetails/extendInstructions.md \
-						 doc/mengeDetails/impl_pedModel.md \	
-						 doc/mengeDetails/elements.md \
-						 doc/mengeDetails/elements/agentGen.md \
-						 doc/mengeDetails/elements/profileSelect.md \
-						 doc/mengeDetails/elements/stateSelect.md \
-						 doc/mengeDetails/elements/elevation.md \
-						 doc/mengeDetails/elements/obstacleSet.md \
-						 doc/mengeDetails/elements/spaceQuery.md \
-						 doc/mengeDetails/elements/tasks.md \
-						 doc/mengeDetails/elements/actions.md \
-						 doc/mengeDetails/elements/events.md \
-						 doc/mengeDetails/elements/goalSelect.md \
-						 doc/mengeDetails/elements/transition.md \
-						 doc/mengeDetails/elements/velComp.md \
-						 doc/mengeDetails/elements/velMod.md \
-						 doc/mengeDetails/elements/goals.md \
-						 doc/mengeDetails/architecture.md \
-						 doc/mengeDetails/commandLine.md \
-						 doc/mengeDetails/examples.md \
-						 doc/mengeDetails/projSpec.md \
-						 doc/mengeDetails/distribution.md 
+INPUT                  = src/Menge/MengeCore \
+                         src/Menge/mengeMain
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding. Doxygen uses
@@ -2025,13 +2000,13 @@ SKIP_FUNCTION_MACROS   = YES
 # the path). If a tag file is not located in the directory in which doxygen is
 # run, you must also specify the path to the tagfile here.
 
-TAGFILES               = doc/tags/MengeCode.tag
+TAGFILES               =
 
 # When a file name is specified after GENERATE_TAGFILE, doxygen will create a
 # tag file that is based on the input files it reads. See section "Linking to
 # external documentation" for more information about the usage of tag files.
 
-GENERATE_TAGFILE       = doc/tags/Menge.tag
+GENERATE_TAGFILE       = doc/tags/MengeCode.tag
 
 # If the ALLEXTERNALS tag is set to YES all external class will be listed in the
 # class index. If set to NO only the inherited external classes will be listed.
