Add initial ellipse implmentation
This implements the ellipse that GCF uses to create its forces.

--- a/projects/VS2005/Plugins/AgtGCF.vcproj
+++ b/projects/VS2005/Plugins/AgtGCF.vcproj
@@ -189,6 +189,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath="..\..\..\src\Plugins\AgtGCF\Ellipse.cpp"
+				>
+			</File>
+			<File
 				RelativePath="$(PluginSrc)\AgtGCF\GCF.cpp"
 				>
 			</File>
@@ -218,6 +222,10 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath="..\..\..\src\Plugins\AgtGCF\Ellipse.h"
+				>
+			</File>
 			<File
 				RelativePath="$(PluginSrc)\AgtGCF\GCF.h"
 				>
