Add preliminary GCF VisAgent class - WIP
This should draw an elliptical agent based on the underlying ellipse.
It is work-in-progress because it hasn't been tied in yet.  The agents
are not being populated yet.

--- a/projects/VS2005/Plugins/AgtGCF.vcproj
+++ b/projects/VS2005/Plugins/AgtGCF.vcproj
@@ -216,6 +216,10 @@
 				RelativePath="$(PluginSrc)\AgtGCF\GCFSimulator.cpp"
 				>
 			</File>
+			<File
+				RelativePath="$(PluginSrc)\AgtGCF\GCFVisAgent.cpp"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
@@ -252,6 +256,10 @@
 			</File>
 			<File
 				RelativePath="$(PluginSrc)\AgtGCF\GCFSimulator.h"
+				>
+			</File>
+			<File
+				RelativePath="$(PluginSrc)\AgtGCF\GCFVisAgent.h"
 				>
 			</File>
 		</Filter>
