--- a/projects/VS2012/Plugins/AgtGCF.vcxproj
+++ b/projects/VS2012/Plugins/AgtGCF.vcxproj
@@ -116,6 +116,7 @@ xcopy /y $(TargetPath) $(ExeDir)\plugins\
     <ClCompile Include="$(PluginSrc)\AgtGCF\GCFInitializer.cpp" />
     <ClCompile Include="$(PluginSrc)\AgtGCF\GCFSimulator.cpp" />
     <ClCompile Include="$(PluginSrc)\AgtGCF\Ellipse.cpp" />
+    <ClCompile Include="$(PluginSrc)\AgtGCF\GCFVisAgent.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(PluginSrc)\AgtGCF\GCF.h" />
@@ -126,6 +127,7 @@ xcopy /y $(TargetPath) $(ExeDir)\plugins\
     <ClInclude Include="$(PluginSrc)\AgtGCF\GCFInitializer.h" />
     <ClInclude Include="$(PluginSrc)\AgtGCF\GCFSimulator.h" />
     <ClInclude Include="$(PluginSrc)\AgtGCF\Ellipse.h" />
+    <ClInclude Include="$(PluginSrc)\AgtGCF\GCFVisAgent.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
