--- a/projects/VS2012/Plugins/AgtGCF.vcxproj.filters
+++ b/projects/VS2012/Plugins/AgtGCF.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="$(PluginSrc)\AgtGCF\GCFSimulator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="$(PluginSrc)\AgtGCF\GCFVisAgent.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(PluginSrc)\AgtGCF\Ellipse.h">
@@ -57,6 +60,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="$(PluginSrc)\AgtGCF\GCFSimulator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="$(PluginSrc)\AgtGCF\GCFVisAgent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
