Changed how agents get added to scene
1) New class: VisAgentFactory -- wraps BaseAgent into VisAgent
2) Instantiated by the simulation DBEntry -- i.e., a simulator class
   has a default visualization.
3) Tied it into the initialization system.

--- a/projects/VS2013/Menge/MengeCore.vcxproj.filters
+++ b/projects/VS2013/Menge/MengeCore.vcxproj.filters
@@ -608,6 +608,8 @@
     </ClCompile>
     <ClCompile Include="$(SrcDir)\MengeCore\PluginEngine\CorePluginEngine.cpp">
       <Filter>Source Files\PluginEngine</Filter>
+    <ClCompile Include="$(SrcDir)\MengeCore\Runtime\VisAgentFactory.cpp">
+      <Filter>Source Files\Runtime</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1189,6 +1191,8 @@
     </ClInclude>
     <ClInclude Include="$(SrcDir)\MengeCore\PluginEngine\CorePluginEngine.h">
       <Filter>Header Files\PluginEngine</Filter>
+    <ClInclude Include="$(SrcDir)\MengeCore\Runtime\VisAgentFactory.h">
+      <Filter>Header Files\Runtime</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
