--- a/projects/VS2013/Menge/MengeCore.vcxproj
+++ b/projects/VS2013/Menge/MengeCore.vcxproj
@@ -393,6 +393,7 @@ xcopy /y $(TargetPath) $(ExeDir)
     <ClCompile Include="$(SrcDir)\MengeCore\Agents\AgentGenerators\NavMeshAgentGenerator.cpp" />
     <ClCompile Include="$(SrcDir)\MengeCore\menge_c_api.cpp" />
     <ClCompile Include="$(SrcDir)\MengeCore\PluginEngine\CorePluginEngine.cpp" />
+    <ClCompile Include="$(SrcDir)\MengeCore\Runtime\VisAgentFactory.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(SrcDir)\mengeCore\Core.h" />
@@ -588,6 +589,7 @@ xcopy /y $(TargetPath) $(ExeDir)
     <ClInclude Include="$(SrcDir)\MengeCore\menge_c_api.h" />
     <ClInclude Include="$(SrcDir)\MengeCore\PluginEngine\BasePluginEngine.h" />
     <ClInclude Include="$(SrcDir)\MengeCore\PluginEngine\CorePluginEngine.h" />
+    <ClInclude Include="$(SrcDir)\MengeCore\Runtime\VisAgentFactory.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="tinyxml_lib.vcxproj">
