Add navigation mesh placement generator
This adds a new agent generator where the position is associated with a
polygon group of the navigation mesh.  This allows for efficient placement
of agents on otherwise overlapping levels.

--- a/projects/VS2005/Menge/MengeCore.vcproj
+++ b/projects/VS2005/Menge/MengeCore.vcproj
@@ -310,6 +310,10 @@
 						>
 					</File>
 					<File
+						RelativePath="$(SrcDir)\mengeCore\Agents\AgentGenerators\NavMeshAgentGenerator.cpp"
+						>
+					</File>
+					<File
 						RelativePath="$(SrcDir)\mengeCore\Agents\AgentGenerators\RectGridGenerator.cpp"
 						>
 					</File>
@@ -1227,7 +1231,6 @@
 						RelativePath="$(SrcDir)\mengeCore\Agents\AgentGenerators\AgentGenerator.h"
 						>
 					</File>
-					<File
 						RelativePath="$(SrcDir)\mengeCore\Agents\AgentGenerators\AgentGeneratorDatabase.h"
 						>
 					</File>
@@ -1239,6 +1242,11 @@
 						RelativePath="$(SrcDir)\mengeCore\Agents\AgentGenerators\ExplicitAgentGenerator.h"
 						>
 					</File>
+					<File
+						RelativePath="$(SrcDir)\mengeCore\Agents\AgentGenerators\NavMeshAgentGenerator.h"
+						>
+					</File>
+					<File
 					<File
 						RelativePath="$(SrcDir)\mengeCore\Agents\AgentGenerators\HexLatticeGenerator.h"
 						>
