Add stress plugin to linux build
Add the appropriate cmake infrastructure.

--- a/projects/g++/Plugins/CMakeLists.txt
+++ b/projects/g++/Plugins/CMakeLists.txt
@@ -45,6 +45,7 @@ ADD_SUBDIRECTORY(AgtHelbing)
 ADD_SUBDIRECTORY(AgtJohansson)
 ADD_SUBDIRECTORY(AgtKaramouzas)
 ADD_SUBDIRECTORY(AgtZanlungo)
+ADD_SUBDIRECTORY(StressGas)
 #ADD_SUBDIRECTORY(Sample)
 
 set( CMAKE_INSTALL_ALWAYS true )
