--- a/projects/VS2013/Plugins/StressGas.vcxproj.filters
+++ b/projects/VS2013/Plugins/StressGas.vcxproj.filters
@@ -18,9 +18,6 @@
     <ClCompile Include="$(PluginSrc)\StressGas\StressGas.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\Plugins\StressGas\StressActions.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\src\Plugins\StressGas\StressGlobals.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -30,12 +27,24 @@
     <ClCompile Include="..\..\..\src\Plugins\StressGas\StressTasks.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\src\Plugins\StressGas\BaseStressAction.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\src\Plugins\StressGas\StressFunction.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\src\Plugins\StressGas\AgentStressor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\src\Plugins\StressGas\TimedStressAction.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\src\Plugins\StressGas\TimedStressFunction.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(PluginSrc)\StressGas\StressGasConfig.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\src\Plugins\StressGas\StressActions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\src\Plugins\StressGas\StressGlobals.h">
@@ -45,6 +54,21 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\src\Plugins\StressGas\StressTasks.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\src\Plugins\StressGas\BaseStressAction.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\src\Plugins\StressGas\StressFunction.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\src\Plugins\StressGas\AgentStressor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\src\Plugins\StressGas\TimedStressAction.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\src\Plugins\StressGas\TimedStressFunction.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
