--- a/projects/VS2013/Plugins/StressGas.vcxproj.filters
+++ b/projects/VS2013/Plugins/StressGas.vcxproj.filters
@@ -24,9 +24,6 @@
     <ClCompile Include="..\..\..\src\Plugins\StressGas\StressManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\src\Plugins\StressGas\StressTasks.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\..\src\Plugins\StressGas\BaseStressAction.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -42,6 +39,9 @@
     <ClCompile Include="..\..\..\src\Plugins\StressGas\TimedStressFunction.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\src\Plugins\StressGas\StressTask.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(PluginSrc)\StressGas\StressGasConfig.h">
@@ -51,9 +51,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\src\Plugins\StressGas\StressManager.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\src\Plugins\StressGas\StressTasks.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\src\Plugins\StressGas\BaseStressAction.h">
@@ -69,6 +66,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\src\Plugins\StressGas\TimedStressFunction.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\src\Plugins\StressGas\StressTask.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
