Add distance stress function
An action will initiate stress based on proximity to a region.  This
includes the DistanceStressAction, DistanceStressFunction, and a demo.

--- a/projects/VS2013/Plugins/StressGas.vcxproj.filters
+++ b/projects/VS2013/Plugins/StressGas.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="..\..\..\src\Plugins\StressGas\DistanceStressFunction.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\src\Plugins\StressGas\DistanceStressAction.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(PluginSrc)\StressGas\StressGasConfig.h">
