--- a/projects/VS2013/Plugins/StressGas.vcxproj
+++ b/projects/VS2013/Plugins/StressGas.vcxproj
@@ -112,6 +112,7 @@ xcopy /y $(TargetPath) $(ExeDir)\plugins\
     <ClCompile Include="$(PluginSrc)\StressGas\StressGas.cpp" />
     <ClCompile Include="..\..\..\src\Plugins\StressGas\AgentStressor.cpp" />
     <ClCompile Include="..\..\..\src\Plugins\StressGas\BaseStressAction.cpp" />
+    <ClCompile Include="..\..\..\src\Plugins\StressGas\DistanceStressAction.cpp" />
     <ClCompile Include="..\..\..\src\Plugins\StressGas\DistanceStressFunction.cpp" />
     <ClCompile Include="..\..\..\src\Plugins\StressGas\TimedStressAction.cpp" />
     <ClCompile Include="..\..\..\src\Plugins\StressGas\StressFunction.cpp" />
