mengeCore compiles but don't link
Errors of the like:
duplicate symbol Menge::Math::Vector3d<float>::z() const in:
    CMakeFiles/menge.dir/Users/chraibi/Workspace/Menge/src/Menge/mengeMain/mengeMain.cpp.o
    ../../lib/libmengeCore.a(AgentGenerator.cpp.o)

--- a/projects/g++/Menge/CMakeLists.txt
+++ b/projects/g++/Menge/CMakeLists.txt
@@ -21,7 +21,6 @@ INCLUDE_DIRECTORIES (${MENGE_SRC_DIR}/MengeCore/PluginEngine)
 
 set( CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fpermissive" )
 
-
 #find the correct OpenMP flag
 FIND_PACKAGE(OpenMP)
 if(OPENMP_FOUND)
@@ -62,9 +61,9 @@ else()
 endif()
 
 FIND_PACKAGE(OpenGL REQUIRED)
-if(OPENGL_FOUND)
-	INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})
-endif()
+INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIRS})
+FIND_PACKAGE(GLUT REQUIRED)
+INCLUDE_DIRECTORIES(  ${GLUT_INCLUDE_DIRS}) 
 
 FIND_PACKAGE(PNG REQUIRED)
 
