Add stress code to plugins doc generation

--- a/doc/Plugins.cfg
+++ b/doc/Plugins.cfg
@@ -764,7 +764,8 @@ INPUT                  = doc/pluginDetails/mainpage.md \
                          src\Plugins\AgtJohansson \
                          src\Plugins\AgtKaramouzas \
                          src\Plugins\AgtZanlungo \
-                         src\Plugins\Terrain
+                         src\Plugins\Terrain \
+						 src\Plugins\StressGas
                          
 
 # This tag can be used to specify the character encoding of the source files
