--- a/projects/g++/Plugins/CMakeLists.txt
+++ b/projects/g++/Plugins/CMakeLists.txt
@@ -27,6 +27,9 @@ INCLUDE_DIRECTORIES (${MENGE_SOURCE_DIR}/MengeCore/resources)
 INCLUDE_DIRECTORIES (${MENGE_SOURCE_DIR}/MengeCore/PluginEngine)
 INCLUDE_DIRECTORIES (${MENGE_SOURCE_DIR}/tinyxml)
 
+set( CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fpermissive -std=c++11" )
+set( CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -std=c++11" )
+
 #find the correct OpenMP flag
 FIND_PACKAGE(OpenMP)
 if(OPENMP_FOUND)
