OSX build compatability (#36)
Address issue #28

Addresses a number of issues in the build and code that prevents building in mac osx.  This is tested to preserve windows and linux builds.  This represents a new release (see releaseNotes.txt).

--- a/projects/g++/Menge/CMakeLists.txt
+++ b/projects/g++/Menge/CMakeLists.txt
@@ -19,8 +19,8 @@ INCLUDE_DIRECTORIES (${MENGE_SRC_DIR}/MengeCore/Agents)
 INCLUDE_DIRECTORIES (${MENGE_SRC_DIR}/MengeCore/Runtime)
 INCLUDE_DIRECTORIES (${MENGE_SRC_DIR}/MengeCore/PluginEngine)
 
-set( CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fpermissive" )
-
+set( CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fpermissive -std=c++11" )
+set( CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -std=c++11" )
 
 #find the correct OpenMP flag
 FIND_PACKAGE(OpenMP)
@@ -62,9 +62,7 @@ else()
 endif()
 
 FIND_PACKAGE(OpenGL REQUIRED)
-if(OPENGL_FOUND)
-	INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})
-endif()
+INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIRS})
 
 FIND_PACKAGE(PNG REQUIRED)
 
